@@ -17,7 +17,7 @@ public class WaterTower {
     public static final int MAX_Y = 18;
     public final Property<ImmutableVector2D> tankBottomCenter = new Property<ImmutableVector2D>( new ImmutableVector2D( 0, MAX_Y ) );
     private static double TANK_RADIUS = 5;
-    private static double TANK_HEIGHT = 10;
+    public static double TANK_HEIGHT = 10;
     private static final int LEG_EXTENSION = 3;
     public static double tankVolume = Math.PI * TANK_RADIUS * TANK_RADIUS * TANK_HEIGHT;
     public final Property<Double> fluidVolume = new Property<Double>( tankVolume );//meters cubed
@@ -66,10 +66,10 @@ public class WaterTower {
     }
 
     public Shape getWaterShape() {
-        return new Rectangle2D.Double( tankBottomCenter.getValue().getX() - TANK_RADIUS, tankBottomCenter.getValue().getY(), TANK_RADIUS * 2, getWaterHeight() );
+        return new Rectangle2D.Double( tankBottomCenter.getValue().getX() - TANK_RADIUS, tankBottomCenter.getValue().getY(), TANK_RADIUS * 2, getWaterLevel() );
     }
 
-    public double getWaterHeight() {
+    public double getWaterLevel() {
         return fluidVolume.getValue() / Math.PI / TANK_RADIUS / TANK_RADIUS;
     }
 
