@@ -1,3 +1,4 @@
+Fixed: decrease in volume should be proportional to water velocity
 Improved water faucet model
 Wired up faucet buttons to model
 Made water velocity vary as v=sqrt(2*g*h)
